corrected contact us form

--- a/css/delani.css
+++ b/css/delani.css
@@ -52,7 +52,7 @@ html{
   text-align: center;
   padding-bottom: 30px;
   padding-top:40px;
-  font-family: 'Copse', serif;
+  font-family:'Copse', serif;
 }
 #about{
   font-family: 'Gabriela', serif;
@@ -176,7 +176,7 @@ footer p{
   text-align: center;
   font-size: 30px;
   padding-top: 50%;
-  font-family: 'Delius Swash Caps', cursive;
+  font-family: 'Copse', cursive;
 }
 @media only screen and (max-width: 755px){
   #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
@@ -185,7 +185,7 @@ footer p{
     top: 20px;
     left: 16px;
     padding-top: 20%;
-    /* font-size: 16px; */
+  
   }
   .col-md-3 img{
     width:100%px;
@@ -199,9 +199,7 @@ footer p{
     margin-left: 2%;
     padding-bottom: 30px;
     margin-bottom: 20px;
-    /* margin-left: 10px; */
 
-    /* margin-right: -20%; */
   }
 }
 @media only screen and (max-width: 425px){
