--- a/css/delani.css
+++ b/css/delani.css
@@ -372,3 +372,12 @@ footer p {
     margin-right: 10%;
   }
 }
+.description{
+  display: none;
+}
+.whatwedoimages{
+  display: block;
+} 
+.whatwedoimages:hover, .description:hover {
+  cursor: pointer;
+}
